--- a/scss/components/_nosotros.scss
+++ b/scss/components/_nosotros.scss
@@ -10,7 +10,7 @@
     text-align: center;
 }
 
-.main-nosotros{
+.section-nosotros{
     .div-nosotros{
         .maps{
             @media only screen and (max-width: 1015px) {
