--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -1,5 +1,15 @@
 %contenedor-principal{
-    margin: 10px;
+    margin: 30px;
     border: #3F3F3F;
     box-shadow: 5px 5px 10px #3F3F3F
 }
+
+%titulo{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    margin: 30px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 40px;
+ }
+ 
