--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -12,6 +12,9 @@
 
 .section-cards {
     .div-card-index {
+        .titulo{
+            @extend %titulo;
+        }
         .card {
             justify-content: center;
             align-content: center;
