--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -1,80 +1,85 @@
 @import '../base/listas';
 @import '../base/extend';
 
-.section-productos {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 65%;
-    margin: 20px auto;
-    padding: 10px;
-
-    @media only screen and (max-width:600px) {
-        width: 80%;
+main {
+    .titulo{
+        @extend %titulo;
     }
-
-    @media screen and (min-width:601px) and (max-width:900px) {
-        width: 90%;
-    }
-    
-    .titulo-productos{
-        grid-column: 1 / 4;
-        text-align: center;
-        font-family: 'Poppins', sans-serif;
-        color: nth($colores,6);
-        background-color: nth($colores,3);
-        margin: 30px;
-        border-radius: 5px;
-    }
-
-    .contenedor-prod {
-        @extend %contenedor-principal;
+    .section-productos {
         display: grid;
-        justify-items: center;
+        grid-template-columns: repeat(3, 1fr);
+        width: 65%;
+        margin: 20px auto;
+        padding: 10px;
 
         @media only screen and (max-width:600px) {
+            width: 80%;
+        }
+
+        @media screen and (min-width:601px) and (max-width:900px) {
+            width: 90%;
+        }
+
+        .titulo-productos {
             grid-column: 1 / 4;
-        }
-
-        .img-prod {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            margin-bottom: 10px;
-        }
-
-        .p-titulo-prod {
-            font-family: sans-serif;
-            font-size: 20px;
-            margin: 3px;
             text-align: center;
+            font-family: 'Poppins', sans-serif;
+            color: nth($colores, 6);
+            background-color: nth($colores, 3);
+            margin-bottom: 30px;
+            border-radius: 5px;
         }
 
-        .contenedor-precio-carrito {
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-           
+        .contenedor-prod {
+            @extend %contenedor-principal;
+            display: grid;
+            justify-items: center;
 
-            .carrito {
-                color: nth($colores,4);
-                margin-bottom: 5px;
+            @media only screen and (max-width:600px) {
+                grid-column: 1 / 4;
+            }
 
-                &:hover {
-                    transform: scale(1.1);
-                    transition-property: all;
-                    transition-duration: 2s;
+            .img-prod {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                margin-bottom: 10px;
+            }
+
+            .p-titulo-prod {
+                font-family: sans-serif;
+                font-size: 20px;
+                margin: 3px;
+                text-align: center;
+            }
+
+            .contenedor-precio-carrito {
+                width: 100%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+
+                .carrito {
+                    color: nth($colores, 4);
+                    margin-bottom: 5px;
+
+                    &:hover {
+                        transform: scale(1.1);
+                        transition-property: all;
+                        transition-duration: 2s;
+                    }
                 }
             }
-        }
 
-        .p-desc-prod {
-            margin: 5px;
-            font-family: sans-serif;
-            text-align: center;
-            font-size: 15px;
-            color: nth($colores,5);
+            .p-desc-prod {
+                margin: 5px;
+                font-family: sans-serif;
+                text-align: center;
+                font-size: 15px;
+                color: nth($colores, 5);
 
+            }
         }
     }
 }
