--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /*import*/
-.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .section-cards .div-card-index .card {
+.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .main-index .section-cards .div-card-index .card {
   margin: 30px;
   border: #3F3F3F;
   box-shadow: 5px 5px 10px #3F3F3F;
 }
 
-main .titulo, .titulo, .section-cards .div-card-index .titulo {
+main .titulo, .main-nosotros .titulo, .main-index .section-cards .div-card-index .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   margin: 30px;
@@ -19,6 +19,21 @@ main .titulo, .titulo, .section-cards .div-card-index .titulo {
   padding: 0;
 }
 
+header .div-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  background-color: black;
+  color: white;
+}
+header .div-bar .texto-bar {
+  align-items: center;
+  font-weight: 100;
+  font-size: 15px;
+  margin-top: 6px;
+}
 header .contenedor-nav .header-logo {
   width: 100px;
   height: auto;
@@ -76,13 +91,13 @@ footer .footer .div-footer div .margin-footer .text-footer {
   padding: 0;
 }
 
-.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .section-cards .div-card-index .card {
+.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .main-index .section-cards .div-card-index .card {
   margin: 30px;
   border: #3F3F3F;
   box-shadow: 5px 5px 10px #3F3F3F;
 }
 
-main .titulo, .titulo, .section-cards .div-card-index .titulo {
+main .titulo, .main-nosotros .titulo, .main-index .section-cards .div-card-index .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   margin: 30px;
@@ -91,12 +106,11 @@ main .titulo, .titulo, .section-cards .div-card-index .titulo {
   font-size: 40px;
 }
 
-.section-banner .div-banner {
+.main-index .section-banner .div-banner {
   width: 100%;
   height: auto;
 }
-
-.section-cards .div-card-index .card {
+.main-index .section-cards .div-card-index .card {
   justify-content: center;
   align-content: center;
   justify-items: center;
@@ -104,7 +118,7 @@ main .titulo, .titulo, .section-cards .div-card-index .titulo {
   width: 300px;
   height: 400px;
 }
-.section-cards .div-card-index .card .titulo-card {
+.main-index .section-cards .div-card-index .card .titulo-card {
   margin: 10px;
   font-family: sans-serif;
   font-size: 20px;
@@ -112,13 +126,13 @@ main .titulo, .titulo, .section-cards .div-card-index .titulo {
   font-weight: 600;
   color: #416A96;
 }
-.section-cards .div-card-index .card .img-card {
+.main-index .section-cards .div-card-index .card .img-card {
   width: 150px;
   height: auto;
   margin: 10px;
   padding: 10px;
 }
-.section-cards .div-card-index .card .p-card {
+.main-index .section-cards .div-card-index .card .p-card {
   margin: 10px;
   font-family: sans-serif;
   font-size: 15px;
@@ -127,17 +141,17 @@ main .titulo, .titulo, .section-cards .div-card-index .titulo {
   color: gray;
 }
 
-.section-nosotros {
+.main-nosotros .section-nosotros {
   margin: 0% 5%;
 }
 
-.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .section-cards .div-card-index .card {
+.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, main .section-productos .contenedor-prod, .main-index .section-cards .div-card-index .card {
   margin: 30px;
   border: #3F3F3F;
   box-shadow: 5px 5px 10px #3F3F3F;
 }
 
-main .titulo, .section-cards .div-card-index .titulo, .titulo {
+main .titulo, .main-index .section-cards .div-card-index .titulo, .main-nosotros .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   margin: 30px;
@@ -216,13 +230,13 @@ main .section-productos .contenedor-prod .p-desc-prod {
   color: gray;
 }
 
-.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, .section-cards .div-card-index .card, main .section-productos .contenedor-prod {
+.section-carrito .contenedor-principal, main .section-contacto .contenedor-principal, .main-index .section-cards .div-card-index .card, main .section-productos .contenedor-prod {
   margin: 30px;
   border: #3F3F3F;
   box-shadow: 5px 5px 10px #3F3F3F;
 }
 
-.section-cards .div-card-index .titulo, .titulo, main .titulo {
+.main-index .section-cards .div-card-index .titulo, .main-nosotros .titulo, main .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   margin: 30px;
@@ -254,13 +268,13 @@ main .section-contacto .contenedor-principal div .icono-redes:hover {
   padding: 0;
 }
 
-.section-carrito .contenedor-principal, .section-cards .div-card-index .card, main .section-productos .contenedor-prod, main .section-contacto .contenedor-principal {
+.section-carrito .contenedor-principal, .main-index .section-cards .div-card-index .card, main .section-productos .contenedor-prod, main .section-contacto .contenedor-principal {
   margin: 30px;
   border: #3F3F3F;
   box-shadow: 5px 5px 10px #3F3F3F;
 }
 
-.section-cards .div-card-index .titulo, .titulo, main .titulo {
+.main-index .section-cards .div-card-index .titulo, .main-nosotros .titulo, main .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   margin: 30px;
