--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ main .section-productos .contenedor-prod .p-desc-prod {
 }
 
 main .section-contacto .contenedor-principal .texto-formulario {
-  color: #3F3F3F;
+  color: #191919;
   text-align: center;
   font-weight: 200;
 }
