--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -12,7 +12,7 @@ header {
         .texto-bar{
             align-items: center;
             font-weight: 100;
-            font-size: 15px;
+            font-size: nth($font-size, 1);
             margin-top: 6px;
         }
       }
