--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -33,7 +33,7 @@
                 .titulo-card {
                     margin: 10px;
                     font-family: sans-serif;
-                    font-size: 20px;
+                    font-size: nth($font-size, 2);
                     text-align: center;
                     font-weight: 600;
                     color: nth($colores, 2);
@@ -49,7 +49,7 @@
                 .p-card {
                     margin: 10px;
                     font-family: sans-serif;
-                    font-size: 15px;
+                    font-size: nth($font-size, 1);
                     text-align: center;
                     font-weight: 400;
                     color: nth($colores, 5);
