--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -48,7 +48,7 @@ main {
 
             .p-titulo-prod {
                 font-family: sans-serif;
-                font-size: 20px;
+                font-size: nth($font-size, 2);
                 margin: 3px;
                 text-align: center;
             }
@@ -80,7 +80,7 @@ main {
                 margin: 5px;
                 font-family: sans-serif;
                 text-align: center;
-                font-size: 15px;
+                font-size: nth($font-size, 1);
                 color: nth($colores, 5);
 
             }
